# ldsoft

./: CMakeLists.txt  README.md  temp_styles.txt
src/: CMakeLists.txt  main.cpp
src/codegen/: STCodeGenerator.cpp  STCodeGenerator.h
src/core/: LadderElement.cpp  LadderElement.h
src/elements/: ConnectionLine.cpp  ConnectionLine.h  ContactElements.cpp  ContactElements.h  ControlElements.cpp  ControlElements.h  FunctionBlockElements.cpp  FunctionBlockElements.h  LogicElements.cpp  LogicElements.h  MathElements.cpp  MathElements.h
src/ui/: IndustrialStyles.h  LadderScene.cpp  LadderScene.h  MainWindow.cpp  MainWindow.h  PropertyEditor.cpp  PropertyEditor.h  RibbonMainWindow.cpp  RibbonMainWindow.h  ThemeManager.cpp  ThemeManager.h  setupElementLibrary_temp.cpp
